tests/errors/arrays/assign-non-indexable-primitive.fn
---
Description: Index-assigning a primitive value that has no setter
Expected: FN3214
---

type Program
{
    static fn Main -> i32
    {
        var x = 5
        x[0] = 1
        return 0
    }
}
